objects/ssot__PartyBusinessLicense__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BusinessTypeId__c</fullName>
        <label>Business Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ComplianceScopeType__c</fullName>
        <label>Compliance Scope Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointAddressId__c</fullName>
        <label>Contact Point Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Business License Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsLicenseExempted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Exempted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IssuingPartyId__c</fullName>
        <label>Issuing Party</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LicenseCategory__c</fullName>
        <label>License Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LicenseExpirationDate__c</fullName>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__LicenseIssuedDate__c</fullName>
        <label>License Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__LicenseNumber__c</fullName>
        <label>License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReceivingPartyId__c</fullName>
        <label>Receiving Party</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VerifiedOnDate__c</fullName>
        <label>Verified On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1721371847303_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyBusinessLicense_ReceivingPartyI_rel</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>PartyBusinessLicense_ReceivingPartyI_rel</relationshipLabel>
        <relationshipName>rel_1721371847303_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1721371854715_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyBusinessLicense_IssuingPartyId__rel</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>PartyBusinessLicense_IssuingPartyId__rel</relationshipLabel>
        <relationshipName>rel_1721371854715_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1721372125757_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyBusinessLicense_BusinessTypeId__rel</label>
        <referenceTo>ssot__BusinessType__dlm</referenceTo>
        <relationshipLabel>PartyBusinessLicense_BusinessTypeId__rel</relationshipLabel>
        <relationshipName>rel_1721372125757_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>